# yaafc

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.xml  mkdocs.yml  pyproject.toml  requirements.txt  rxconfig.py
.github/: copilot-instructions.md
context/: PLANNING.md  PRD01_table_polars_dataframe.md  TASKS.md  layout_tasks.md
docs/: index.md  modules.md
scripts/: Dockerfile.devserver  ch_colors.py  ch_colors2.py  global_hotkeys_example.txt
tests/: test_card.py  test_events.py  test_foo.py  test_layout.py  test_table.py  test_widget_stack.py
yaafc/: colors.json  colors.py.orig  colors.ts  yaafc.py
yaafc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
yaafc/components/: DEPRECTATED_sidebar.py  file_list.py  header.py  native_file_list.py  sidebar.py
yaafc/config/: colors.py  constants.py  heroicons.py  menus.py  meta.py  styles.py  types.py
yaafc/events/: __init__.py  animation_transition_events.py  blob_error_close_events.py  clipboard_events.py  custom_events.py  enhanced_event_watcher.py  fetch_form_submit_events.py  focus_events.py  gamepad_hash_popstate_storage_events.py  generic_events.py  keyboard_events.py  mouse_events.py  pointer_events.py  touch_events.py  ui_events.py  unload_transition_events.py
yaafc/pages/: __init__.py  files.py  grid.py  index.py  layout.py  not_found_404.py  projects.py
yaafc/states/: pages_selection.py  settings.py  slotted_page.py  theme_state.py
yaafc/templates/: default.py  main.py  template.py
yaafc/ui/: __init__.py  card.py  colors.py  header.py  sidebar.py  table.py
yaafc/ui/libraries/dnd_kit/: dnd_kit.py
yaafc/ui/widgets/: __init__.py  file_list.py  widget_stack.py
yaafc/utilities/: DEPRECTATED_colors.py  humanbytes.py  to_list.py
